[tool.poetry]
name = "table_aggregator"
version = "0.1.0"
description = "Aggregates useful data using DuckDB and Pandas"
authors = ["Andrii Kozin"]
packages = []

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.0"
duckdb = "^0.9.0"
pyarrow = "^20.0.0"
tabulate = "^0.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
